welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: ';' expected but ',' found.
  avance(4);gauche(),avance(2);droite();avance(4);droite();avance(2);gauche();avance(4);gauche()
                    ^