welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (compteur1 <- 1 to 7; compteur2 <- 1 to 4){
  avance(4);gauche(),avance(2);droite();avance(4);droite();avance(2);gauche();avance(4);gauche()
}